# machine_learning_coursework

./: README.md
ml_project1/: 1-49e03(0-95).csv  1-5e03(1-02).csv  1-7e03(1-05).csv  1-9(1.050).csv  1-9e03(1-055).csv  2-01e03.csv  final_result3-8.csv  generate_data.m  ne01.m  ne2.m  ne3.m  ne4.m  normaleqn.m  savetofile.m  theta-sample.csv  theta_generate.m
project1_linearregression/: Matlab NN Toolbox.ppt  gdcpp  gdcpp.cpp  normaleq.cpp  predict.csv
project1_linearregression/gradient_test/: ComputeCost.m  data_generate.m  featureNormal.m  gd.m  generate_test.m  gradientdecend.m  test.m  test2.m  train_y.csv  ttt.csv
project1_linearregression/matrix_test/: test  test.cpp
project1_linearregression/netural_network/: lr05_goal0001ver.csv  neturalnetwork.m
project1_linearregression/normaleqn_project1_ver1/: aaa  aaa.csv  aaa_ver1.csv  aaa_ver2.csv  aaa_ver3.csv  aaa_ver4.csv  normaleqn.m  origin_test.csv  theta_generate.m  (+1 more)
project2_Deep_learning/: Convolutional Neural Networks (LeNet.docx  adaboost_test.m  bp_neuturalnetwork_bydengguang.cpp  final0.85.csv  gb_ver1.py  knn_matlab.m  lenet_example.py  lr_test.py  lsvm_test.py  nb_test.py  nnt1.m  nnt2.m  random_forest_ver2.py  randomforest_ver1.m  rdf25000_45.8.csv  submission_demo.csv  svm_test.py  write_text.m  writedata.m
project3_recommandation/: recommandation_system.md
team_work/: deceision_tree_mpi.md  数据挖掘感想
team_work/random_forest/github_randomforest/random-forests-master/: .gitignore  CMakeLists.txt  LICENSE  common-libraries.hpp  forest.hpp  node-gini.hpp  node-matrix.hpp  node.hpp  tree.hpp
(+116 files in other folders)
